adicionado pseudo elemento para resolver padding collapse

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,13 +29,56 @@ align-items: center;
 }
 
 
+
 .Home-movies{
+    padding: 15px 0 0 15px;
     display: flex;
     width: 1200px;
-    padding-top: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
     justify-content: space-between;
     overflow: auto;
+}
+
+.Home-movies div:nth-last-child(2){
+    margin-right: 0;
+
+}
+
+.pseudo-element{
+    min-width: 15px;
+    padding: 0;
+    background-color: rgb(226, 226, 226);
+}
+
+
+@media(max-width:1300px){
+    .Home-movies{
+        width: 800px;
+    }
+}
+
+@media(max-width:850px){
+    .Home-movies{
+        width: 100%;
+    }
+
+    .Home-news{
+        margin: 3rem 0;
+        width: 360px;
+        height: 180px;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+
+    .carousel-item img{
+        height: 180px !important;
+        margin: auto !important;
+    }
+
+    .carousel-caption h5{
+        font-size: 0.8rem !important;
     
+    }
+
+    .trending{
+        font-size: 1.5rem;
+    }
 }
