--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -1,10 +1,9 @@
 .card {
     width: 10rem;
     min-width: 10rem;
-    margin-right:3.3rem ;
+    margin-right: 1.6rem;
     background-color: rgb(226, 226, 226);
     border: none;
-    
 }
 
 .card-body{
@@ -21,11 +20,17 @@
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    height: 240.42px;
 }
 
 .card-img-top:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transform: scale(1.1);
+    
+}
+.card-img-top:hover ~ .card-body > .score-container {
+    transform: scale(1.2) translateY(12px) ;
+    
 }
 
 .fa-star{
@@ -45,6 +50,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     
 }
 
@@ -66,4 +72,31 @@
 
 .card-release-date{
     color: grey;
+}
+
+@media(max-width:850px){
+    .card-img-top{
+        height: 168.3px;
+    }
+    .card {
+        width: 7rem;
+        min-width: 7rem; 
+    }
+
+    .score-container{
+
+        left: 10px;
+        top: 150px;
+        margin:0;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        
+    }
+
+    .percentage{
+        
+        top: 25%;
+        left: 75%;
+    }
 }
